--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="orange">#FFFF6D00</color>
+    <color name="light_orange">#FFFFB200</color>
+    <color name="dark_purple">#FF523DBD</color>
+    <color name="purple">#FF907AD6</color>
+    <color name="light_purple">#FFCFC6ED</color>
+
+    <color name="yellow">#FFFFEC1F</color>
+    <color name="pink">#FFF566B0</color>
+    <color name="red">#FFEB0825</color>
+    <color name="green">#FF19BE48</color>
+    <color name="blue">#FF2CA4FF</color>
+
+    <color name="light_grey">#FFADADAD</color>
+    <color name="grey">#FF858585</color>
+    <color name="almost_black">#FF1F1F1F</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
