changed some coleors and started developing themes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="dark_purple">#FF523DBD</color>
     <color name="purple">#FF907AD6</color>
     <color name="light_purple">#FFCFC6ED</color>
+    <color name="very_light_purple">#FFe6e0f5</color>
 
     <color name="yellow">#FFFFEC1F</color>
     <color name="pink">#FFF566B0</color>
