--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.Recipent" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor"
-            >@color/white</item>
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 </resources>
