--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.Recipent" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/grey1000</item>
-        <!--TODO: change so bar color will match set theme, not system theme-->
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
